# 5eefa001-cd15-4a22-965c-ddfd39afa411

./: .env-example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0872e89e8798_initial_migration.py
src/sensor_api/: main.py
src/sensor_api/api/: sensors.py  utils.py  validators.py
src/sensor_api/config/: __init__.py  timescaledb.py
src/sensor_api/data/: models.py
src/sensor_api/storage/: timescaledb.py
src/weather_api/storage/: influxdb.py
tasks/: __init__.py  check.py  data.py  test.py
tests/: conftest.py  test_sensor_api_integration.py
