[project]
name = "weather-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "influxdb>=5.3.1",
    "litestar>=2.17.0",
    "pydantic>=2.11.9",
    "msgspec>=0.19.0",
]

[dependency-groups]
dev = [
    "pyrefly>=0.34.0",
    "pytest>=8.4.2",
    "ruff>=0.13.1",
]
